# SteveDeck

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: generate-icon.cjs  package.json
apps/desktop/scripts/: make-engine-bundle.mjs  make-latest-json.mjs
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: README.md  package.json
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/src/: lib.rs  main.rs
docker/: Dockerfile  README.md  deploy-targets.example.json  deploy-tencent.ps1  docker-compose.yml
docs/: 2026-06-02-mc-bot-player-design.md  2026-06-05-code-architecture-review.md  2026-06-07-code-review.md  2026-06-07-feature-completeness-review.md  2026-06-07-handoff.md  AI_INTEGRATION.md  BUILD.md  PERFORMANCE.md  REMOTE_ACCESS.md  STATUS.md  USER_GUIDE.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-06-07-auto-use-module-engine.md
docs/superpowers/specs/: 2026-06-05-configurable-header-metrics-and-reconnect-design.md  2026-06-06-record-actions-and-waypoint-design.md  2026-06-07-auto-use-module-design.md  2026-06-08-death-return-design.md  2026-06-08-server-config-pack-design.md
patches/: prismarine-viewer@1.33.0.patch
