[package]
name = "mc-bot-player"
version = "0.1.0"
description = "mc-bot-player 桌面客户端（瘦客户端，遥控引擎）"
authors = ["mc-bot-player"]
edition = "2021"

[lib]
name = "mc_bot_player_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
